# tau

./: .gitattributes  .gitignore  .worktreeinclude  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  GUIDELINES_CHEATSHEET.md  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  deny.toml  index.html  lefthook.yml  mutants.toml  rust-toolchain.toml
crates/landlock-exec-repro/: Cargo.toml
crates/landlock-exec-repro/src/: main.rs
crates/tau-app/: Cargo.toml
crates/tau-app/src/: lib.rs
crates/tau-app/tests/: serve_cancel.rs  serve_concurrent.rs  serve_handshake.rs  serve_run_batch.rs  serve_run_streaming.rs  serve_shutdown.rs
crates/tau-cli/: Cargo.toml
crates/tau-cli/src/: cli.rs  exit.rs  lib.rs  main.rs  output.rs  tracing.rs
crates/tau-cli/tests/: check_common.rs  cmd_chat.rs  cmd_chat_persistence.rs  cmd_chat_resume.rs  cmd_check_clean.rs  cmd_check_config.rs  cmd_check_output_formats.rs  cmd_check_packages.rs  cmd_check_subcommands.rs  cmd_check_target.rs  cmd_init.rs  cmd_install.rs  cmd_install_cross_check_render.rs  cmd_install_skill_render.rs  cmd_list.rs  cmd_no_sandbox_flag.rs  cmd_orchestration.rs  cmd_plugin_describe.rs  cmd_plugin_run_protocol.rs  cmd_resolve.rs  cmd_resolve_check_sandbox.rs  cmd_run.rs  cmd_sandbox_setup.rs  cmd_sandbox_status.rs  cmd_session_delete.rs  cmd_session_export.rs  cmd_session_list.rs  cmd_session_show.rs  cmd_skill_export.rs  cmd_skill_import.rs  cmd_skill_list.rs  cmd_skill_show.rs  cmd_target.rs  cmd_uninstall.rs  cmd_update.rs  cmd_verify.rs  cmd_verify_anthropic_strict.rs  cmd_workflow.rs  color.rs  cross_platform.rs  (+14 more)
crates/tau-domain/: Cargo.toml
crates/tau-domain/fuzz/: Cargo.toml  README.md
crates/tau-domain/src/: agent.rs  error.rs  fixtures.rs  id.rs  lib.rs  message.rs  value.rs  version.rs
crates/tau-domain/tests/: escape_hatch_registry.rs  manifest_roundtrip.rs  manifest_validation_table.rs  message_envelope_serde.rs  package_source_grammar.rs  proptest_ids.rs  proptest_message_envelope.proptest-regressions  proptest_message_envelope.rs  proptest_package_source.rs  proptest_package_source_serde.rs  proptest_plugin_manifest.rs  proptest_value.proptest-regressions  proptest_value.rs  wire_format_golden.rs
crates/tau-observe/: Cargo.toml
crates/tau-observe/src/: capture.rs  filter.rs  install.rs  lib.rs  preview.rs  vocabulary.rs
crates/tau-observe/tests/: install_smoke.rs  preview_discipline.rs
crates/tau-pkg/: Cargo.toml
crates/tau-pkg/fuzz/: .gitignore  Cargo.toml  README.md
crates/tau-pkg/src/: error.rs  git.rs  install.rs  lib.rs  lockfile.rs  manifest.rs  registry.rs  resolve.rs  sandbox_check.rs  scope.rs  skill_check.rs  skill_resolve.rs  source_list.rs  synthesize.rs  tree_hash.rs  update.rs  verify.rs
crates/tau-pkg/tests/: bundle_fixture.rs  concurrent_install.rs  install_anthropic_format.rs  install_builds_rust_cargo_plugin.rs  install_cross_check.rs  install_lifecycle.rs  install_reference_skills.rs  install_skill_cross_check.rs  lockfile_migration.rs  manifest_validation.rs  proptest_lockfile.proptest-regressions  proptest_lockfile.rs  proptest_manifest_validation.rs  proptest_scope_config.rs  scope_resolve.rs  uninstall.rs  update.rs
crates/tau-plugin-compat/: Cargo.toml
crates/tau-plugin-compat/src/: driver.rs  lib.rs  startup_io.rs
crates/tau-plugin-compat/tests/: layer3_check_sandbox.rs  layer4_container.rs  layer4_native.rs
crates/tau-plugin-conformance/: Cargo.toml
crates/tau-plugin-conformance/src/: lib.rs
crates/tau-plugin-protocol/: Cargo.toml
crates/tau-plugin-protocol/fuzz/: Cargo.toml  README.md
crates/tau-plugin-protocol/src/: error.rs  frame.rs  framer.rs  handshake.rs  lib.rs  test_support.rs
crates/tau-plugin-protocol/tests/: handshake_roundtrip.rs  proptest_framing.rs
crates/tau-plugin-sdk/: Cargo.toml
crates/tau-plugin-sdk/src/: configure.rs  error.rs  handshake.rs  lib.rs  streaming.rs  tracing_layer.rs
crates/tau-plugin-sdk/tests/: configure_roundtrip.rs  handshake_response.rs  run_llm_backend_via_fake_peer.rs  run_tool_via_fake_peer.rs
crates/tau-plugin-test-support/: Cargo.toml
crates/tau-plugin-test-support/src/: cassette.rs  lib.rs
crates/tau-plugins/anthropic/: Cargo.toml  Dockerfile  tau.toml
crates/tau-plugins/echo-llm/: Cargo.toml  tau.toml
crates/tau-plugins/echo-tool/: Cargo.toml
crates/tau-plugins/fs-read/: Cargo.toml  Dockerfile  README.md  tau.toml
crates/tau-plugins/ollama/: .dockerignore  Cargo.toml  Dockerfile  tau.toml
crates/tau-plugins/openai/: Cargo.toml  Dockerfile  tau.toml
crates/tau-plugins/shell/: Cargo.toml  Dockerfile  README.md  tau.toml
crates/tau-ports/: Cargo.toml
crates/tau-ports/src/: error.rs  fixtures.rs  lib.rs  llm.rs  orchestration.rs  sandbox.rs  storage.rs  tool.rs
crates/tau-ports/tests/: error_composition.rs  llm_helpers.rs  mock_llm.rs  mock_storage.rs  mock_tool.rs  namespace_grammar.rs  proptest_chunk_roundtrip.rs  proptest_key.rs  proptest_namespace.rs  proptest_tool_use_accumulator.rs  tool_adapter.rs
crates/tau-runtime/: Cargo.toml
crates/tau-runtime/src/: builder.rs  capability.rs  dispatch.rs  error.rs  lib.rs  options.rs  outcome.rs  run.rs  stream.rs  tool_args.rs
crates/tau-runtime/tests/: capability_override_e2e.rs  orchestration_invariants.rs  plugin_host_capability_filter.rs  plugin_host_handshake.rs  plugin_host_ipc_llm.rs  plugin_host_recording.rs  run_capability_denied.rs  run_completed.rs  run_filters_unauthorized_tools.rs  run_kernel_errors.rs  run_max_turns.rs  run_streaming_e2e.rs  run_with_history.rs  run_with_tool_calls.rs  sandbox_container.rs  sandbox_mismatch.rs  sandbox_native.rs  skill_spawn_e2e.rs  tool_args_validation_e2e.rs  tool_plugin_e2e.rs  tracing_emission.rs
crates/tau-sandbox-container/: Cargo.toml
crates/tau-sandbox-container/src/: lib.rs  probe.rs  runner.rs
crates/tau-sandbox-native/: Cargo.toml
crates/tau-sandbox-native/src/: exec.rs  lib.rs  light.rs  (+5 more)
crates/tau-sandbox-proxy/: Cargo.toml
crates/tau-sandbox-windows/: Cargo.toml
crates/tau-workflow/: Cargo.toml
(+2184 files in other folders)
