[workspace]
resolver = "2"
members = [
    "crates/tau-domain",
    "crates/tau-ports",
    "crates/tau-infra",
    "crates/tau-app",
    "crates/tau-pkg",
    "crates/tau-observe",
    "crates/tau-runtime",
    "crates/tau-cli",
    "crates/tau-plugin-protocol",
    "crates/tau-plugin-sdk",
    "crates/tau-plugins/echo-llm",
    "crates/tau-plugins/echo-tool",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LEBOCQTitouan/tau"
authors = ["Titouan Lebocq <75916953+LEBOCQTitouan@users.noreply.github.com>"]

[workspace.dependencies]
tau-domain          = { path = "crates/tau-domain", version = "0.0.0" }
tau-ports           = { path = "crates/tau-ports",  version = "0.0.0" }
tau-pkg             = { path = "crates/tau-pkg",    version = "0.0.0" }
tau-runtime         = { path = "crates/tau-runtime", version = "0.0.0" }
tau-plugin-protocol = { path = "crates/tau-plugin-protocol", version = "0.0.0" }
tau-plugin-sdk      = { path = "crates/tau-plugin-sdk", version = "0.0.0" }
thiserror       = "2"
semver          = { version = "1" }
uuid            = { version = "1", features = ["v7"] }
url             = "2"
serde           = { version = "1", features = ["derive"] }
base64          = "0.22"
proptest        = "1"
walkdir         = "2"
futures-core    = "0.3"
toml            = "0.8"
fs4             = "0.8"
humantime-serde = "1"
tempfile        = "3"
tracing         = "0.1"
rmp-serde       = "1"
rmpv            = { version = "1", features = ["with-serde"] }
bytes           = "1"
tokio           = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-util", "io-std", "process", "sync", "time"] }
