[workspace]
resolver = "2"
members = [
    "crates/tau-domain",
    "crates/tau-ports",
    "crates/tau-infra",
    "crates/tau-app",
    "crates/tau-pkg",
    "crates/tau-observe",
    "crates/tau-runtime",
    "crates/tau-cli",
    "crates/tau-plugin-protocol",
    "crates/tau-plugin-sdk",
    "crates/tau-plugin-test-support",
    "crates/tau-plugin-conformance",
    "crates/tau-plugins/echo-llm",
    "crates/tau-plugins/echo-tool",
    "crates/tau-plugins/anthropic",
    "crates/tau-plugins/ollama",
    "crates/tau-plugins/openai",
    "crates/tau-plugins/fs-read",
    "crates/tau-plugins/shell",
    "crates/tau-sandbox-native",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LEBOCQTitouan/tau"
authors = ["Titouan Lebocq <75916953+LEBOCQTitouan@users.noreply.github.com>"]

[workspace.dependencies]
tau-domain          = { path = "crates/tau-domain", version = "0.0.0" }
tau-ports           = { path = "crates/tau-ports",  version = "0.0.0" }
tau-pkg             = { path = "crates/tau-pkg",    version = "0.0.0" }
tau-runtime         = { path = "crates/tau-runtime", version = "0.0.0" }
tau-plugin-protocol = { path = "crates/tau-plugin-protocol", version = "0.0.0" }
tau-plugin-sdk      = { path = "crates/tau-plugin-sdk", version = "0.0.0" }
tau-plugin-test-support = { path = "crates/tau-plugin-test-support", version = "0.0.0" }
tau-plugin-conformance  = { path = "crates/tau-plugin-conformance",  version = "0.0.0" }
thiserror       = "2"
semver          = { version = "1" }
uuid            = { version = "1", features = ["v7"] }
url             = "2"
serde           = { version = "1", features = ["derive"] }
sha2            = "0.10"
base64          = "0.22"
proptest        = "1"
walkdir         = "2"
globset         = "0.4"
jsonschema      = "0.46"
futures-core    = "0.3"
toml            = "0.8"
fs4             = "0.8"
humantime-serde = "1"
tempfile        = "3"
tracing         = "0.1"
rmp-serde       = "1"
rmpv            = { version = "1", features = ["with-serde"] }
bytes           = "1"
tokio           = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-util", "io-std", "process", "sync", "time"] }
reqwest             = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream  = "0.2"
async-stream        = "0.3"
secrecy             = "0.10"
landlock     = "0.4"
nix          = { version = "0.29", default-features = false, features = ["sched", "user", "process", "fs"] }
seccompiler  = "0.5"
