[package]
name = "tau-app"
description = "Application orchestration layer for tau's runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Workspace crates
tau-runtime = { workspace = true }
tau-domain = { workspace = true }
tau-pkg = { workspace = true }
tau-plugin-protocol = { workspace = true }
tau-ports = { workspace = true }

# External
anyhow = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "io-std", "signal", "time"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
tau-ports = { workspace = true, features = ["test-fixtures"] }
tau-runtime = { workspace = true }
tempfile = { workspace = true }
