[package]
name = "tau-cli"
description = "Command-line interface for tau."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tau-domain         = { workspace = true, features = ["serde"] }
tau-pkg            = { workspace = true }
tau-runtime        = { workspace = true }
tau-ports          = { workspace = true }
semver             = { workspace = true }
clap               = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde              = { workspace = true }
serde_json         = "1"
toml               = { workspace = true }
thiserror          = { workspace = true }
anyhow             = "1"
termimad           = "0.30"
rustyline          = "14"
is-terminal        = "0.4"
tempfile           = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
insta      = { version = "1", features = ["yaml", "json"] }
predicates = "3"
proptest   = { workspace = true }
tempfile   = "3"
url        = { workspace = true }
tau-ports  = { workspace = true, features = ["test-fixtures"] }

[features]
default = []
# Compile in a mock LLM backend + echo tool so `tau run` is functional
# without real plugin loading (which lands in Phase 1+). Production
# builds leave this off; the v0.1 binary surfaces
# `BuildError::NoLlmBackend` until plugin loading exists. Pulls in the
# `test-fixtures` constructors from tau-ports so the mock can build
# `#[non_exhaustive]` `CompletionResponse` / `ToolUse` / `ToolResult`
# values without struct-literal syntax (E0639).
test-mock = ["tau-ports/test-fixtures"]
