[package]
name = "tau-cli"
description = "Command-line interface for tau."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tau-domain          = { workspace = true, features = ["serde"] }
tau-pkg             = { workspace = true }
tau-ports           = { workspace = true }
tau-plugin-protocol = { workspace = true }
tau-runtime         = { workspace = true }
tau-workflow        = { workspace = true }
tau-app             = { workspace = true }
futures-core        = { workspace = true }
base64             = { workspace = true }
humantime          = "2"
humantime-serde    = { workspace = true }
rmp-serde          = { workspace = true }
rmpv               = { workspace = true }
semver             = { workspace = true }
clap               = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde              = { workspace = true }
serde_json         = "1"
toml               = { workspace = true }
thiserror          = { workspace = true }
# UUID v7 for session ids (ADR-0013 / Tier 3 priority 11).
uuid               = { workspace = true }
anyhow             = "1"
chrono             = { workspace = true }
termimad           = "0.34"
rustyline          = "18"
is-terminal        = "0.4"
tempfile           = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
insta      = { version = "1", features = ["yaml", "json", "redactions"] }
predicates = "3"
proptest   = { workspace = true }
rstest     = { workspace = true }
tempfile   = "3"
url        = { workspace = true }
# test-fixtures feature needed by tests/common/mock_llm.rs (T9: orchestration pattern tests).
tau-ports  = { workspace = true, features = ["test-fixtures", "serde"] }

[features]
default = []
