[package]
name = "tau-observe"
description = "Observability primitives for tau (structured logging, tracing)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json"] }
thiserror          = { workspace = true }

[features]
default = []
# Enables the `tau_observe::capture` test-only subscriber. Consumers
# typically add this under `[dev-dependencies]` of crates whose tests
# assert on emitted spans/events.
test-fixtures = []
