[package]
name = "tau-pkg"
description = "Tau package manager: install, resolve, and manage extension packages."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
tau-domain      = { workspace = true, features = ["serde"] }
thiserror       = { workspace = true }
toml            = { workspace = true }
serde           = { workspace = true }
# Source-agnostic whole-tree SHA-256 for `tau verify` (ADR-0012 / priority 7).
sha2            = { workspace = true }
walkdir         = { workspace = true }
fs4             = { workspace = true }
humantime-serde = { workspace = true }
semver          = { workspace = true }
tempfile        = { workspace = true }

[features]
default = []

[dev-dependencies]
proptest   = { workspace = true }
serde_json = "1"
