[package]
name = "tau-pkg"
description = "Tau package manager: install, resolve, and manage extension packages."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
tau-domain            = { workspace = true, features = ["serde"] }
tau-plugin-protocol   = { workspace = true }
thiserror             = { workspace = true }
toml                  = { workspace = true }
serde                 = { workspace = true }
# Source-agnostic whole-tree SHA-256 for `tau verify` (ADR-0012 / priority 7).
sha2            = { workspace = true }
walkdir         = { workspace = true }
fs4             = { workspace = true }
humantime-serde = { workspace = true }
semver          = { workspace = true }
tempfile        = { workspace = true }
tracing         = { workspace = true }
tokio           = { workspace = true, features = ["process", "io-util", "macros", "rt", "time"] }
rmp-serde       = { workspace = true }
serde_json      = "1"
globset         = { workspace = true }

[features]
default = []

[dev-dependencies]
proptest   = { workspace = true }
# `tau_ports::fixtures::scratch_dir` for labeled tempdir creation
# (T7 of the test-suite-upgrades plan). Test-fixtures feature only.
tau-ports  = { workspace = true, features = ["test-fixtures"] }
