[package]
name = "tau-plugin-sdk"
description = "Plugin author SDK for tau: per-port generic runners over the tau plugin protocol."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
tau-domain          = { workspace = true, features = ["serde"] }
tau-ports           = { workspace = true, features = ["serde"] }
tau-plugin-protocol = { workspace = true }
serde              = { workspace = true }
serde_json         = "1"
rmp-serde          = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[features]
default = []

[dev-dependencies]
tau-plugin-protocol = { workspace = true, features = ["test-support"] }
proptest            = { workspace = true }
tokio               = { workspace = true, features = ["macros", "rt-multi-thread"] }
