[package]
name = "tau-ports"
description = "Port (trait) definitions for tau's hexagonal architecture."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
tau-domain   = { workspace = true, features = ["serde"] }
thiserror    = { workspace = true }
futures-core = { workspace = true }
uuid         = { workspace = true }

[features]
default       = []
test-fixtures = []

[dev-dependencies]
tokio        = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
futures      = "0.3"
proptest     = { workspace = true }
serde_json   = "1"
