[package]
name = "tau-runtime"
description = "Public Rust API surface for embedding tau as a library."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
tau-domain          = { workspace = true, features = ["serde"] }
tau-ports           = { workspace = true, features = ["serde"] }
tau-pkg             = { workspace = true }
tau-plugin-protocol = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
# `v4` for session-id minting in `Runtime::run` per spec §3.7; the
# workspace alias only enables `v7` (used by id newtypes in tau-domain).
uuid                = { workspace = true, features = ["v4"] }
# Plugin host carries plugin config as JSON values across the IPC
# boundary; surfaces in `plugin_host::load_*` signatures.
serde_json          = "1"
# Plugin host spawns plugin binaries and reads their stdio streams.
tokio               = { workspace = true }
# Plugin host encodes/decodes MessagePack payloads for the wire protocol.
rmp-serde           = { workspace = true }
# Plugin host streaming adapter (`stream_router`) implements the
# `Stream` trait from `futures-core` so it can build a
# `tau_ports::CompletionStream` (which is `Pin<Box<dyn Stream<...>>>`).
futures-core        = { workspace = true }

[features]
default = []
# Exposes test-only constructors and re-exports under
# `plugin_host::__internals` so integration tests in
# `crates/tau-runtime/tests/plugin_host_ipc_*.rs` can build a
# `PluginProcess` from a pre-paired reader+writer (no subprocess
# spawn) and exercise the per-port IPC adapters end-to-end.
test-support = ["tau-plugin-protocol/test-support"]

[dev-dependencies]
tokio              = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tau-domain         = { workspace = true, features = ["test-fixtures"] }
tau-ports          = { workspace = true, features = ["test-fixtures", "serde"] }
tau-plugin-protocol = { workspace = true, features = ["test-support"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
proptest           = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
# `StreamExt` for the stream_router unit tests + the streaming
# integration test. Pinned at the same minor version other workspace
# crates already pull in (e.g. tau-plugin-sdk dev-deps).
futures-util       = "0.3"
