[package]
name = "tau-sandbox-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux native sandbox adapter (landlock + seccomp + namespaces) for tau"

[dependencies]
tau-domain = { workspace = true, features = ["serde"] }
tau-ports  = { workspace = true, features = ["serde"] }
tracing    = { workspace = true }
tokio      = { workspace = true }
thiserror  = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock    = { workspace = true }
nix         = { workspace = true }
seccompiler = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt"] }
serde_json = "1"
tau-domain = { workspace = true, features = ["serde"] }
tau-ports  = { workspace = true, features = ["serde"] }

[features]
default = []
# Gated by `cargo test --features integration-tests` for tests that
# actually invoke landlock/seccomp on the host kernel.
integration-tests = []
